--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,23 +1,37 @@
 h1 {
-  font-size: 50px;
-  font-family: cursive;
+  font-size: 100px;
+  font-family: monospace;
   text-align: center;
-  color: white;
+  color: yellow;
 }
 
 body
 {
-  background-size: cover;
-  background-image: url("http://free4kwallpaper.com/wp-content/uploads/2016/01/Scenic-Beach-4K-Wallpaper.jpg");
+  background-image: url("http://i1104.photobucket.com/albums/h329/zorq1/Realistic-fire-animated-transparent-gif-short.gif"), url("http://fullhdpictures.com/wp-content/uploads/2016/02/Great-Volcano-Wallpaper.jpg");
+  background-position: bottom, top;
+  background-repeat: repeat-x, no-repeat;
+  background-size: auto, 100vw 100vh;
   height: 100vh;
 }
 
+html{
+  background-color: black;
+}
+
+h2
+{
+  font-weight: bolder;
+  font-family: cursive;
+  color: red;
+  text-align: center;
+  font-size: 50px;
+}
 nav
 {
   list-style-type: none;
-  background: rgba(0, 255, 0, 0.3);
+  background: rgba(1, 1, 1, 0.5);
   font-family: fantasy;
-  font-size: 40px;
+  font-size: 50px;
   text-align: center;
   padding: 20px;
 
@@ -26,8 +40,10 @@ nav
 a
 {
   display: inline;
-  margin: 20px;
+  margin: 40px;
   text-decoration: none;
+  color: violet;
+  font-family: Impact, Charcoal, sans-serif
 }
 
 .footer {
@@ -51,8 +67,8 @@ ul
 {
   list-style-type: none;
   background: rgba(0, 0, 0, 0.5);
-  font-family: fantasy;
-  font-size: 40px;
+  font-family: cursive;
+  font-size: 35px;
   text-align: center;
   padding: 20px;
 
